fix bugs of not showing button correctly

--- a/front-end/soccer/src/components/Tournaments.css
+++ b/front-end/soccer/src/components/Tournaments.css
@@ -1,5 +1,6 @@
 .h1Color{
     color: cadetblue;
+    text-align: center;
 }
 
 .h2Color{
